testdata/baselines/reference/submodule/conformance/checkJsdocTypeTag3.errors.txt
test.js(1,12): error TS8010: Type annotations can only be used in TypeScript files.


==== test.js (1 errors) ====
    /** @type {Array<?number>} */
               ~~~~~~~~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
    var nns;
    